--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quiz_thursday
+name: srds
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
