--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,13 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   flutter_plugin_pdf_viewer: ^1.0.7
-
+  photo_view: ^0.4.0
+  contactus: ^1.1.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
+
 
 
 # For information on the generic Dart part of this file, see the
