--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,13 @@ flutter:
     - assets/images/gtr.png
     - assets/images/gtrwhite.png
     - assets/images/bathurst.png
+    - assets/images/image1.png
+    - assets/images/image2.png
+    - assets/images/image3.png
+    - assets/images/image4.png
+    - assets/images/image5.png
+    - assets/images/image6.png
+    - assets/images/image7.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
