--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  firebase_core: ^0.4.0+9
-  firebase_auth: ^0.14.0+5
-  flutter_plugin_pdf_viewer: ^1.0.7
-  photo_view: ^0.4.0
+  cupertino_icons: ^1.0.3
+  firebase_core: ^0.7.0
+  fireflutter: ^0.0.48
+  firebase_auth: ^0.20.1
+  flutter_pdfview: ^1.2.1
+  photo_view: ^0.13.0
   circular_profile_avatar: ^1.0.6
 
 dev_dependencies:
